--- a/.editorconfig
+++ b/.editorconfig
@@ -1,21 +1,14 @@
-# top-most EditorConfig file
+# # top-most EditorConfig file
 root = true
 
-# Unix-style newlines with a newline ending every file
 [*]
 end_of_line = lf
 insert_final_newline = true
-
-# Set default charset
 charset = utf-8
-
 trim_trailing_whitespace = true
-
-# Indentation override for all JS
-[*.js]
 indent_style = space
 indent_size = 2
 quote_type = single
 
-[*.{html,less,css,json}]
+[*.{html,json}]
 quote_type = double
