--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "co": "^4.6.0",
     "debug": "^4.1.1",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
+    "koa-jwt": "^3.6.0",
     "koa-logger": "^3.2.1",
-    "koa-onerror": "^4.1.0",
     "koa-router": "^8.0.8",
     "koa-static": "^5.0.0",
-    "koa-views": "^6.2.1"
+    "koa-views": "^6.2.1",
+    "mysql2": "^2.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
